
2009-08-01  Douglas Soares de Andrade  <douglas@archlinux.org>

	* Updated for x86_64: 1.9.0

2008-08-06  Eric Belanger  <eric@archlinux.org>

	* python-pygame 1.8.1-2
	* Fixed file permissions (close FS#11082)

2008-07-31  Douglas Soares de Andrade  <douglas@archlinux.org>

	* Updated for i686: 1.8.1

2008-03-31  Eric Belanger  <eric@archlinux.org>

	* python-pygame 1.8.0-1
	* Upstream update
	* Added ChangeLog